tests/errors/freestanding-extern-c-call.ari
extern "C" fn abs(value: c_int) -> c_int;

fn main() -> i64 {
  return abs(-1) as i64;
}
